<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg3"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:fontFamily="serif"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginVertical="16dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:src="@drawable/image_home_page" />

    <Button
        android:id="@+id/btn_login_to_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_login"
        android:layout_margin="10dp"
        android:padding="13dp"
        android:background="@drawable/style_button"
        />
    <Button
        android:id="@+id/btn_login_to_faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty_login"
        android:layout_margin="10dp"
        android:padding="13dp"
        android:background="@drawable/style_button"
        />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/style_button_2"/>
</LinearLayout>
